# casvps

./: .gitattributes  .gitignore  AI.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yml
.claude/: settings.local.json
src/: main.rs
src/backup/: mod.rs  recovery.rs  restic.rs  schedule.rs
src/certificates/: acme.rs  internal_ca.rs  mod.rs  self_signed.rs
src/clustering/: consensus.rs  mod.rs  node.rs  raft.rs
src/compliance/: audit.rs  fips.rs  gdpr.rs  hipaa.rs  iso27001.rs  mod.rs  pci_dss.rs  sox.rs
src/config/: mod.rs
src/core/: mod.rs  platform.rs  service_client.rs  startup.rs  system_validator.rs
src/database/: mod.rs  models.rs  schema.rs
src/iso/: cache.rs  downloader.rs  mod.rs  sources.rs
src/monitoring/: collector.rs  mod.rs  victoria_metrics.rs
src/network/: dhcp.rs  dns.rs  mod.rs  sdn.rs  tftp.rs
src/security/: clamav.rs  deduplication.rs  fail2ban.rs  firewall.rs  geoip.rs  mod.rs  suricata.rs
src/services/: mod.rs  nginx.rs  postfix.rs
src/smart/: mod.rs  network_optimizer.rs  pattern_detector.rs  recovery_engine.rs  resource_allocator.rs  storage_optimizer.rs
src/virtualization/: mod.rs  qemu.rs
src/web/: mod.rs
src/web/api/: admin.rs  auth.rs  containers.rs  mod.rs  monitoring.rs  networks.rs  storage.rs  vms.rs
src/web/ui/: mod.rs
src/web/ui/templates/: admin.html  mod.rs  user.html
