[package]
name = "casvps"
version = "1.0.0"
edition = "2021"
authors = ["CasjaysDev Apps"]
license = "MIT"
repository = "https://github.com/casapps/casvps"
description = "Complete Application Server for Virtualization"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono", "uuid"] }

# Web Server
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }

# Networking
pnet = "0.34"
ipnetwork = "0.20"
trust-dns-server = "0.23"
dhcpv4 = "0.2"

# Security
sha2 = "0.10"
argon2 = "0.5"
jsonwebtoken = "9.2"
ring = "0.17"
rcgen = "0.12"
webpki = "0.22"

# System
nix = { version = "0.27", features = ["fs", "process", "signal", "user"] }
sysinfo = "0.30"
procfs = "0.16"
libc = "0.2"

# QEMU/Virtualization
virt = "0.3"

# Storage
tar = "0.4"
flate2 = "1.0"
zstd = "0.13"
lz4 = "1.24"

# Consensus
raft = "0.7"

# Monitoring (embedded Victoria Metrics client)
prometheus = "0.13"
prometheus-parse = "0.2"

# Utils
bytes = "1.5"
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
arc-swap = "1.7"
futures = "0.3"
pin-project = "1.1"

# Serialization
bincode = "1.3"
toml = "0.8"

# HTTP Client
reqwest = { version = "0.11", features = ["rustls-tls", "json", "stream"] }

# Embedded services
# DHCP server
dhcp-server = { version = "0.1", optional = true }
# DNS server
trust-dns-resolver = "0.23"
# TFTP
async-tftp = "0.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.9"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "casvps"
path = "src/main.rs"